name:                toyrobot
version:             0.0.2
homepage:            https://github.com/lokulin/toy-robot-haskell
license:             MIT
license-file:        LICENSE
author:              lokulin
maintainer:          lauchlin@lauchlin.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable toyrobot
  main-is:             toyrobot.hs
  build-depends:       base >=4.6 && <4.8, regex-tdfa >= 1.2, hspec >= 2.1, QuickCheck >= 2.8 , numbers >= 3000.2
  default-language:    Haskell2010

Test-Suite test
  type:       exitcode-stdio-1.0
  main-is:    ToyRobot/Heading_spec.hs
  build-depends: base >=4.6 && <4.8, regex-tdfa >= 1.2, hspec >= 2.1, QuickCheck >= 2.8 , numbers >= 3000.2
  default-language:    Haskell2010
