name:                toyrobot
version:             0.0.3
homepage:            https://github.com/lokulin/toy-robot-haskell
license:             MIT
license-file:        LICENSE
author:              lokulin
maintainer:          lauchlin@lauchlin.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable toyrobot
  main-is:             toyrobot.hs
  build-depends:       base >=4.6 && <4.8,
                       regex-tdfa >= 1.2,
                       numbers >= 3000.2,
                       toyrobot
  default-language:    Haskell2010
  hs-source-dirs:      src/exe

library
  Exposed-modules:     ToyRobot.Point,
                       ToyRobot.Table,
                       ToyRobot.Heading,
                       ToyRobot.Robot
  default-language:    Haskell2010
  hs-source-dirs:      src/lib
  build-depends:       base >=4.6 && <4.8,
                       regex-tdfa >= 1.2,
                       numbers >= 3000.2

Test-Suite test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base >=4.6 && <4.8,
                       hspec >= 2.1,
                       toyrobot
  default-language:    Haskell2010
  hs-source-dirs:      test/
